@@ -157,6 +157,7 @@
         <package>policyd-weight</package>
         <package>postgrey</package>
         <package>procmail</package>
+        <package>resolvconf</package>
         <package>sasl2-bin</package>
         <package>ssh</package>
         <package>tar</package>
