@@ -28,8 +28,7 @@ use strict;
 use warnings;
 
 use FindBin;
-use lib "$FindBin::Bin/..";
-use lib "$FindBin::Bin/../PerlLib";
+use lib "$FindBin::Bin/..", "$FindBin::Bin/../PerlLib";
 
 use iMSCP::Debug;
 use iMSCP::Boot;
@@ -41,7 +40,7 @@ use open OUT => ':utf8';
 # Turn off localisation features to force any command output to be in english
 $ENV{'LC_MESSAGES'} = 'C';
 
-# Not not clear screen at end of script
+# Do not clear screen at end of script
 $ENV{'IMSCP_CLEAR_SCREEN'} = 0;
 
 umask(027);
