@@ -29,8 +29,7 @@ use strict;
 use warnings;
 
 use FindBin;
-use lib "$FindBin::Bin/..";
-use lib "$FindBin::Bin/../PerlLib";
+use lib "$FindBin::Bin/..", "$FindBin::Bin/../PerlLib";
 
 use iMSCP::Debug;
 use iMSCP::Getopt;
