@@ -27,9 +27,7 @@ use strict;
 use warnings;
 
 use FindBin;
-use lib "$FindBin::Bin/..";
-use lib "$FindBin::Bin/../PerlLib";
-use lib "$FindBin::Bin/../PerlVendor";
+use lib "$FindBin::Bin/..", "$FindBin::Bin/../PerlLib";
 
 use iMSCP::Debug;
 use iMSCP::Boot;
@@ -41,7 +39,7 @@ use iMSCP::Execute;
 # Turn off localisation features to force any command output to be in English
 $ENV{'LC_MESSAGES'} = 'C';
 
-# Not not clear screen at end of script
+# Do not clear screen at end of script
 $ENV{'IMSCP_CLEAR_SCREEN'} = 0;
 
 newDebug('imscp-net-interfaces-mngr.log');
